Fix preview paths for /preview/ subdirectory

--- a/preview/bio.html
+++ b/preview/bio.html
@@ -14,27 +14,27 @@ li { padding-bottom:15px; }
 <div class="page">
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
-<a href="/overview.html">Start Here</a><br>
-<a href="/index.html">Homepage</a><br>
-<a href="/blog/index.html">Blog</a><br>
-<a href="/bio.html">Bio</a><br>
-<a href="/linuxperf.html">Linux Perf</a><br>
-<a href="/rcu.html">RCU</a><br>
-<a href="/tracing.html">Tracing</a><br>
-<a href="/schedulers.html">Schedulers</a><br>
-<a href="/memory-ordering.html">Memory Ordering</a><br>
-<a href="/gpu.html">GPU Drivers</a><br>
-<a href="/resources/index.html">Talks</a><br>
-<a href="/joel/index.html">Resume</a><br>
-<a href="/books.html">Books</a><br>
-<a href="/sites.html">Other Sites</a><br>
+<a href="/preview/overview.html">Start Here</a><br>
+<a href="/preview/index.html">Homepage</a><br>
+<a href="/preview/blog/index.html">Blog</a><br>
+<a href="/preview/bio.html">Bio</a><br>
+<a href="/preview/linuxperf.html">Linux Perf</a><br>
+<a href="/preview/rcu.html">RCU</a><br>
+<a href="/preview/tracing.html">Tracing</a><br>
+<a href="/preview/schedulers.html">Schedulers</a><br>
+<a href="/preview/memory-ordering.html">Memory Ordering</a><br>
+<a href="/preview/gpu.html">GPU Drivers</a><br>
+<a href="/preview/resources/index.html">Talks</a><br>
+<a href="/preview/joel/index.html">Resume</a><br>
+<a href="/preview/books.html">Books</a><br>
+<a href="/preview/sites.html">Other Sites</a><br>
 </div>
 
 <div class="recent">
-<center><a href="/bio.html"><img src="/Images/joel_photo.jpg" width=180></a><br><font size=-2><i>Joel Fernandes</i></font></center>
+<center><a href="/preview/bio.html"><img src="/preview/Images/joel_photo.jpg" width=180></a><br><font size=-2><i>Joel Fernandes</i></font></center>
 <br>
-<a href="/blog/index.html">Blog index</a><br>
-<a href="/blog/rss.xml">RSS</a><br>
+<a href="/preview/blog/index.html">Blog index</a><br>
+<a href="/preview/blog/rss.xml">RSS</a><br>
 </div>
 
 <div class="content">
