Simplify sidebar nav: Home, Blog, Resume

--- a/bio.html
+++ b/bio.html
@@ -14,20 +14,9 @@ li { padding-bottom:15px; }
 <div class="page">
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
-<a href="/overview.html">Start Here</a><br>
-<a href="/index.html">Homepage</a><br>
-<a href="/blog/index.html">Blog</a><br>
-<a href="/bio.html">Bio</a><br>
-<a href="/linuxperf.html">Linux Perf</a><br>
-<a href="/rcu.html">RCU</a><br>
-<a href="/tracing.html">Tracing</a><br>
-<a href="/schedulers.html">Schedulers</a><br>
-<a href="/memory-ordering.html">Memory Ordering</a><br>
-<a href="/gpu.html">GPU Drivers</a><br>
-<a href="/resources/index.html">Talks</a><br>
-<a href="/joel/index.html">Resume</a><br>
-<a href="/books.html">Books</a><br>
-<a href="/sites.html">Other Sites</a><br>
+<a href="/">Home</a><br>
+<a href="/categories.html">Blog</a><br>
+<a href="/joel/joel-resume.pdf">Resume</a><br>
 </div>
 
 <div class="recent">
